test/Fail/TermSplicingLooping.err
TermSplicingLooping.agda:6.1-8.40: error: [TerminationIssue]
Termination checking failed for the following functions:
  f
Problematic calls:
  f
